Solved more sonar issues #6